--- a/_extensions/refuge/refuge_light.scss
+++ b/_extensions/refuge/refuge_light.scss
@@ -1,7 +1,6 @@
 /*-- scss:defaults --*/
 
 // Define colors (https://doimspp.sharepoint.com/sites/fws-FF09R00000/SitePages/Comms-Visual-Identity-Landing.aspx)
-
 $blue: #02426D;
 $white: #FFFFFF;
 $light-blue: #4e7b99;
@@ -21,57 +20,52 @@ $right-arrow: "\2192"; // Unicode character for right arrow
 
 
 // Import fonts (https://doimspp.sharepoint.com/sites/fws-FF09R00000/SitePages/Comms-Visual-Identity-Landing.aspx)
-
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap&family=Eater&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url(https://fonts.googleapis.com/css?family=Cabin:600,600i&display=swap);
 
 
 // Define fonts
-
-$lato: "Lato", sans-serif;
-
+$Lato: "Lato", sans-serif;
+$Cabin: "Cabin" san-serif;
 
 // Colors
-
+$body-bg: $white !default;
 $body-color: $blue !default;
 $link-color: $light-blue !default;
 $selection-bg: $accent-green !default;
 $presentation-heading-color: $blue !default;
 
-
 // Fonts
+$font-family-sans-serif: $Lato !default;
+$presentation-heading-font: $Lato !default;
+$presentation-font-size-root: 46px;
 
-$font-family-sans-serif: $lato !default;
-$presentation-heading-font: $lato !default;
-$presentation-font-size-root: 32px;
+// Code block styling
+$code-block-font-size: 0.5em;
+$code-block-border-left: $light-blue;
 
 
 /*-- scss:rules --*/
 
 // Hyperlinks
-
 .reveal a {
   line-height: 1.5em;
 }
 
 
 // Paragraphs
-
 .reveal p {
-  font-weight: 300;
-  margin-top: 1.25em;
+  font-weight: 400;
+  margin-top: 1.2em;
 }
 
-
 // Footnotes
-
 .reveal .slide aside .aside-footnotes {
     font-size: 0.5em;
     font-weight: 300;
 }
 
-
 // Font sizes
-
 .small {
   font-size: 0.8em;
   }
@@ -89,48 +83,38 @@ $presentation-font-size-root: 32px;
 }
 
 
-// Title and headings
-
+// Title slide formatting
 #title-slide {
   text-align: left;
-
   .title {
     color: $body-color;
-    font-size: 1.4em;
+    font-size: 3em;
     font-weight: bold;
   }
-
   .subtitle {
     color: $light-blue;
-    font-style: italic;
     margin-top: 0em;
     font-weight: 400;
   }
-  
   .date {
     color: $body-color;
     font-weight: 300;
     margin-top: 2em;
     font-size: 0.6em;
   }
-
   .institute,
   .quarto-title-affiliation,
   .quarto-title-author-email {
-    font-style: italic;
     font-weight: 300;
     color: $body-color;
   }
-
   .author,
   .quarto-title-author-name {
     color: $body-color;
   }
-
   .quarto-title-authors {
     display: flex;
     justify-content: left;
-
     .quarto-title-author {
       padding-left: 0em;
       padding-right: 0em;
@@ -139,38 +123,45 @@ $presentation-font-size-root: 32px;
   }
 }
 
+// Remove slide numbering from title slide
+.reveal .slide-number > a[href*='title-slide'] {
+  display: none;
+}
+
 
 // Headers
-
-.reveal h2 {
-  font-weight: normal;
-  font-size: 1.4em;
+.reveal .slide h1 {
+  font-family: $Lato, serif;
 }
 
-.reveal h3 {
+.reveal .slide h2 {
+  font-weight: 600;
+  font-size: 1.8em;
+}
+.reveal .slide h3 {
   color: $light-blue;
-  font-style: italic;
-  font-weight: normal;
+  font-style: normal;
+  font-weight: 600;
   font-size: 0.95em;
 }
-
-.reveal h4 {
+.reveal .slide h4 {
   color: $light-blue;
   font-weight: 300;
   margin-top: 1.25em;
 }
 
 
-// Alerts etc.
-
+// Custom alert text
 .alert {
   color: $accent-orange;
 }
 
+// Custom font color
 .fg {
   color: var(--col, $accent-dark-blue);
 }
 
+// Custom text highlight
 .bg {
   background-color: var(--col, $accent-dark-grey);
   padding: 0.1em;
@@ -180,21 +171,16 @@ $presentation-font-size-root: 32px;
 
 
 // Lists
-
 // Unordered lists
-
 .reveal ul {
   font-weight: 300;
   padding-left: 16px;
-
   li::marker {
     color: mix($light-blue, $white, 70%);
   }
 }
-
 .reveal ul ul {
   list-style: none;
-
   li:before {
     content: $right-arrow;
     color: mix($light-blue, $white, 60%);
@@ -207,11 +193,9 @@ $presentation-font-size-root: 32px;
 
 
 // Ordered lists
-
 .reveal ol {
   font-weight: 300;
   padding-left: 16px;
-
   li::marker {
     color: $light-blue;
   }
@@ -219,7 +203,6 @@ $presentation-font-size-root: 32px;
 
 
 // Move "hamburger" menu button to top right
-
 .reveal .slide-menu-button {
   position: fixed;
   top: 6px;
@@ -234,9 +217,7 @@ $presentation-font-size-root: 32px;
   pointer-events: auto;
 }
 
-
-// Same for chalkboard buttons (with an offset)
-
+// Move chalkboard buttons to top right (with an offset)
 .reveal .slide-chalkboard-buttons {
   position: fixed;
   top: 12px;
@@ -253,7 +234,6 @@ $presentation-font-size-root: 32px;
 
 
 // Beamer-style button link environment
-
 .button {
   display: inline-block;
   padding: 6px 12px;
@@ -272,12 +252,10 @@ $presentation-font-size-root: 32px;
   border-radius: 4px;
   transition: all 0.2s ease-in-out;
 }
-
 .button:hover {
   background-color: $accent-dark-blue;
   border-color: $accent-dark-blue;
 }
-
 .button::before {
   content: "▶";
   margin-right: 5px;
@@ -285,7 +263,6 @@ $presentation-font-size-root: 32px;
 
 
 // Tables
-
 // Headers for DT::datatable()
 .custom-header {
   color: black;
@@ -293,6 +270,7 @@ $presentation-font-size-root: 32px;
   font-size: 0.5em;
 }
 
+// Table body
 .reveal table {
   // height: auto; /* Adjust table width to fit content up to the available slide space */
   margin: auto;
@@ -309,7 +287,7 @@ $presentation-font-size-root: 32px;
   font-weight: lighter; /* Lighter font weight for main table text */
 }
 
-/* Adds a bottom border to the table header row for distinction */
+/* Add a bottom border to the table header row for distinction */
 .reveal table thead th,
 .reveal .slides table tr:last-child td,
 .reveal .slides table {
@@ -329,7 +307,6 @@ $presentation-font-size-root: 32px;
 
 // Special catch for etable environment to ensure these table images don't overflow the slide.
 // See: https://lrberge.github.io/fixest/articles/etable_new_features.html
-
 .etable {
   width: 100%;
   height: calc(100% - 3em); /* Adjust 3em based on the height of your header, if necessary */
@@ -348,8 +325,7 @@ $presentation-font-size-root: 32px;
 
 
 // Centering text and figures
-
-// center text
+// Center text
 .center {
   margin: 0 auto;
   text-align: center;
@@ -378,9 +354,36 @@ $presentation-font-size-root: 32px;
 }
 
 
-// Add shadow to figures 
-.shadow {
-  fig-align: "center";
-  border-radius: 5px;
-  box-shadow: 4.2px 4.5px 2.5px rgba(65, 65, 65, 0.737);
+// Add drop shadow to images 
+img.drop {    
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    filter: drop-shadow(0 0 0.75rem);
+}
+
+
+// Template slides
+
+// Dark
+.reveal .dark {
+  color: $white;
+  .slide-background-content {
+    background: $blue;
+  }
+  code {
+    color: $white;
+  }
+  h2 {
+    color: $accent-light-blue;
+    font-family: $Lato, serif;
+  }
+}
+
+.reveal .footer {
+  color:$light-blue;
+}
+
+.reveal .footer > a[href*='title-slide'] {
+  display: none;
 }
